# hello-smoke-installer

./: Cargo.toml  README.md  build.sh  main.py  main.spec  requirements.txt
src/: main.rs
